--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Il mio viaggio a Londra</title>
 </head>
+
 <body>
-    
+
+
+    <!--  -->
+    <header>
+        <h1>Il mio viaggio a Londra</h1>
+
+
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="./london eye 1">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="./london eye 2">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="./london eye 3">
+        <hr>
+
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
+
+
 </body>
 </html>
