--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
         </table>
         <hr>
 
+        <!-- to do list -->
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London &Xscr;</li>
+            <li>Visitare Greenwich &checkmark;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &checkmark;</li>
+            <li>Mangiare il tipico fish and chips inglese &Xscr;</li>
+        </ul>
+        <hr>
+
+
+
     </main>
 
     <footer>
