--- a/index.html
+++ b/index.html
@@ -79,6 +79,32 @@
             <li>Mangiare il tipico fish and chips inglese &Xscr;</li>
         </ul>
         <hr>
+        
+        <!-- Info -->
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li> <strong>999</strong> - Emergenza</li>
+                    <li> <strong>101 </strong>- Numero Polizia</li>
+                    <li> <strong>111</strong> - Numero assistenza medica</li>
+                </ul>
+            </li>
+                <li>Hotel
+                    <ul>
+                        <li> <strong>Nome Hotel:</strong>Buckingham Palace</li>
+                        <li> <strong>Indizirro Hotel:</strong> Westminster,London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                    <li>aereo
+                        <ul>
+                            <li> <strong>Volo di andata:</strong> YI234X, ore 9:30 da Milano Malpensa</li>
+                            <li><strong>Volo di ritorno :</strong> YI236X, ore 18:30 da London Heathrow</li>
+                        </ul>
+                    </li>
+        </ol>
+        <hr>
+
 
 
 
