add photos and footer

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             </li>
                 <li>Hotel
                     <ul>
-                        <li> <strong>Nome Hotel:</strong>Buckingham Palace</li>
-                        <li> <strong>Indizirro Hotel:</strong> Westminster,London SW1A 1AA, Regno Unito</li>
+                        <li> <strong>Nome Hotel: </strong> Buckingham Palace</li>
+                        <li> <strong>Indizirro Hotel: </strong> Westminster,London SW1A 1AA, Regno Unito</li>
                     </ul>
                 </li>
                     <li>aereo
@@ -106,13 +106,18 @@
         <hr>
 
 
-
+        <h3>Le foto:</h3>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="London">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n
+        " alt="London 1">
+        <hr>
 
     </main>
 
-    <footer>
+        <footer>
+            Made with &hearts; by Martina
 
-    </footer>
+        </footer>
 
 
 
